add security and gateway

--- a/microservice-stock/order-service/src/main/resources/application.yml
+++ b/microservice-stock/order-service/src/main/resources/application.yml
@@ -29,4 +29,9 @@ kafka:
     address: localhost:29092
     topic-name: order-topic
     group-id: order-group-id
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://eureka:password@localhost:8761/eureka
     
