--- a/microservice-stock/inventory-service/pom.xml
+++ b/microservice-stock/inventory-service/pom.xml
@@ -53,6 +53,10 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
 	</dependencies>
 
 </project>
