--- a/microservice-stock/inventory-service/src/main/resources/application.yml
+++ b/microservice-stock/inventory-service/src/main/resources/application.yml
@@ -22,5 +22,10 @@ spring:
       ddl-auto: none
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://eureka:password@localhost:8761/eureka
+
 server:
-  port: 8030
+  port: ${INVENTORY_PORT:8030}
