--- a/microservice-stock/order-service/pom.xml
+++ b/microservice-stock/order-service/pom.xml
@@ -66,6 +66,11 @@
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+			<!--<version>4.0.3</version>-->
+		</dependency>
 	</dependencies>
 
 </project>
