--- a/microservice-stock/product-service/src/main/resources/application.yml
+++ b/microservice-stock/product-service/src/main/resources/application.yml
@@ -21,5 +21,10 @@ spring:
       ddl-auto: none
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://eureka:password@localhost:8761/eureka
+
 server:
   port: 8020
