--- a/microservice-stock/api-gateway/src/main/resources/application.yml
+++ b/microservice-stock/api-gateway/src/main/resources/application.yml
@@ -2,7 +2,13 @@
 
 app:
   version: 0.0.1
-
+management:
+  zipkin:
+    tracing:
+      endpoint: http://localhost:9411/api/v2/spans
+  tracing:
+    sampling:
+      probability: 1.0 # only for testing purpose, switch back to 0.1 for production code
 spring:
   profiles:
     active: dev
@@ -56,5 +62,3 @@ logging:
   pattern:
     level: "%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]"
 
-
-# Product service routes
