--- a/microservice-stock/discovery-server/src/main/resources/application.yml
+++ b/microservice-stock/discovery-server/src/main/resources/application.yml
@@ -8,6 +8,13 @@ spring:
     active: dev
   application:
     name: discovery-server
+management:
+  zipkin:
+    tracing:
+      endpoint: http://localhost:9411/api/v2/spans
+  tracing:
+    sampling:
+      probability: 1.0 # only for testing purpose, switch back to 0.1 for production code
 #  security:
 #    user:
 #      name: eureka
