--- a/microservice-stock/product-service/src/main/resources/application.yml
+++ b/microservice-stock/product-service/src/main/resources/application.yml
@@ -1,7 +1,13 @@
 
 app:
   version: 0.0.1
-
+management:
+  zipkin:
+    tracing:
+      endpoint: http://localhost:9411/api/v2/spans
+  tracing:
+    sampling:
+      probability: 1.0 # only for testing purpose, switch back to 0.1 for production code
 spring:
   profiles:
     active: dev
